Simple API for uploading an array of files and some aditional data.
